# rekognition_trail_cam

./: README.md  pyproject.toml
src/handlers/: lambda_handler.py
src/models/: event_model.py
src/services/: rekognition_service.py
src/utils/: cloudwatch_metrics.py
tests/handlers/: test_lambda_handler.py
tests/models/: test_event_model.py
tests/services/: test_rekognition_service.py
tests/utils/: test_cloudwatch_metrics.py
