[build-system]
requires = ["hatch"]
build-backend = "hatch.backends.pdm_backend"

[project]
name = "rekognition"
version = "0.1.0"
description = "get metadata from photos"
authors = ["justin hauer <justinhauer@icloud.com>"]

[dependencies]
python = "^3.9"
aws_lambda_powertools = "^1.11.0"
boto3 = "^1.18.0"

[dev-dependencies]
pytest = "^6.0.0"
